PLZ-779 Updated api doc. Added ability for get user photos.
